# simple-LLMRF

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile.sh
app/: CMakeLists.txt  main.cpp
docs/: 面向GGUF的LLM轻量级推理框架设计与实现-现有功能说明.md
include/: sllmrf.h
include/sllmrf/: device.h  gguf.h  internlm2.h  operators.h  tensor.h  tokenizer.h
src/: CMakeLists.txt  device.cpp  gguf.cpp  internlm2.cpp  internlm2_cuda.cu  internlm2_cuda.h  operators.cpp  operators_cuda.cu  operators_cuda.h  tensor.cpp  tokenizer.cpp
test/: CMakeLists.txt  test.cpp
